# metricmq

./: .gitignore  BENCHMARK_COMPLETE.md  BENCHMARK_GUIDE.md  BINARY_PROTOCOL.md  CMakeLists.txt  Doxyfile  ESP32_S3_DEMO_GUIDE.md  ESP32_SECURITY_DEMO_GUIDE.md  ESP32_TESTING_GUIDE.md  EXACTLY_ONCE_COMPLETE.md  EXACTLY_ONCE_EXPLAINED.md  EXACTLY_ONCE_SPEC.md  GRACEFUL_SHUTDOWN_COMPLETE.md  PERSISTENCE.md  PERSISTENCE_COMPLETE.md  PERSISTENCE_QUICK_REF.md  PROJECT_STATUS.md  PROJECT_STATUS_REALISTIC.md  QUICKSTART.md  README.md  README_NEW.md  ROADMAP_1-2_DAYS.md  SPDLOG_COMPLETE.md  SPRINT_SUMMARY.md  TEST_PERSISTENCE.md  _redirects  conanfile.txt  netlify.toml
benchmark/: latency_benchmark.cpp  persistence_benchmark.cpp  protocol_benchmark.cpp  throughput.cpp  throughput_benchmark.cpp
demos/project1-heartbeat/: README.md
demos/project1-heartbeat/board-a/src/: main.cpp
demos/project1-heartbeat/board-b/src/: main.cpp
demos/project2-exactly-once/: README.md
demos/project2-exactly-once/board-a/src/: main.cpp
demos/project2-exactly-once/board-b/src/: main.cpp
demos/project3-signed-security/: README.md
demos/project3-signed-security/board-a/: platformio.ini
demos/project3-signed-security/board-a/src/: main.cpp
demos/project3-signed-security/board-b/src/: main.cpp
demos/project4-command-control/: README.md
demos/project4-command-control/board-a/: platformio.ini
demos/project4-command-control/board-a/src/: main.cpp
demos/project4-command-control/board-b/src/: main.cpp
docs/: PLATFORMIO_GUIDE.md  TECHNICAL.md  TESTING.md  doxygen-extra.css  mainpage.md
esp32-metricmq/: README.md  keywords.txt  library.properties
esp32-metricmq/examples/DHT22Sensor/: DHT22Sensor.ino
esp32-metricmq/examples/DemoPublisher/: DemoPublisher.ino
esp32-metricmq/examples/DemoSubscriber/: DemoSubscriber.ino
esp32-metricmq/examples/SecurePublisher/: SecurePublisher.ino
esp32-metricmq/examples/SecureSubscriber/: SecureSubscriber.ino
esp32-metricmq/examples/SimplePublish/: SimplePublish.ino
esp32-metricmq/examples/SimpleSubscribe/: SimpleSubscribe.ino
esp32-metricmq/src/: MetricMQ.cpp  MetricMQ.h
examples/: binary_pub_only.cpp  binary_sub_only.cpp  crypto_demo.cpp  exactly_once_test.cpp  persistence_test.cpp  pub_only.cpp  pubsub_raw_tcp.cpp  pubsub_redis.cpp  pull_only.cpp  push_only.cpp  signed_publish_test.cpp  sub_only.cpp
include/metricmq/: Message.hpp  binary_protocol.hpp  binary_pubsub.hpp  broker.hpp  client.hpp  config.hpp  crypto.hpp  logger.hpp  metrics.hpp  metrics_server.hpp  pubsub.hpp  queue.hpp  types.hpp  version.hpp
metricmq-platformio-test/: README.md  platformio.ini
metricmq-platformio-test/src/: main.cpp
metricmq-wokwi-esp8266/: README.md  libraries.txt  sketch.ino  wokwi.toml
scripts/: build_check.ps1  open-wpa.bat  record-wpa.ps1  run-broker.ps1  test_metrics.ps1
src/: binary_protocol.cpp  binary_protocol.hpp  binary_pubsub.cpp  broker.cpp  broker.hpp  logger.cpp  main.cpp  metrics.cpp  metrics_server.cpp  pubsub.cpp  queue.cpp  resp_parser.cpp  resp_parser.hpp  session.cpp  session.hpp
src/crypto/: keystore.cpp  signing.cpp  signing.hpp
src/storage/: LmdbStorage.cpp  LmdbStorage.hpp
tools/: keygen.cpp
wokwi/metricmq-esp32-demo/: README.md  libraries.txt  sketch.ino  wokwi.toml
